라우터, 페이지네이션수정중

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <!-- built files will be auto injected -->
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=dcedc64f0e6431272747a7a4ad31c1f6"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=dcedc64f0e6431272747a7a4ad31c1f6&libraries=services"
     ></script>
   </body>
 </html>
